# starkoncoin

./: Cargo.toml  LICENSE  build.rs
proto/: blockchain.proto
src/: main.rs
src/crypto/: mod.rs
src/node/: blockchain.rs  mod.rs  net.rs  transaction.rs
src/wallet/: account.rs
