[package]
name = "starkoncoin"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
secp256k1 = { version = "0.22", features = ["rand"] }
rand = "0.8"
hex = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
prost = "0.13"
tonic = "*"

[build-dependencies]
tonic-build = "*"